--- a/Carte Ilias/Import Carte/Leaflet fonc/index.html
+++ b/Carte Ilias/Import Carte/Leaflet fonc/index.html
@@ -13,6 +13,8 @@
   integrity="sha384-6rCYjRgWDEI2RlZxiVihj1WIZB/uvFiRCGpavTVgFrSPDL0Bk1AiqCW+mmv5h0LP"
   crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  
+  <script src="donnee/test.geojson"></script>
 
   <style>  body { margin:0; padding:0; }  #map { position: absolute; top:0; bottom:0; right:0; left:0; }  #map-title { position: relative; margin-top: 10px; margin-left: 50px; float: left; background: white; border: 2px solid rgba(0,0,0,0.2); padding: 6px 8px; font-family: Helvetica; font-weight: bold; font-size: 24px; z-index: 800; }</style>
 </head>
@@ -20,7 +22,12 @@
 
   <div id="map-title">Veuillez entrer votre adresse de livraison<br></br>Selectionnez le directement sur la carte</div>
   <div id="map"></div>
+  
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js"></script>-->
+  <script src="js/coucheUne.js"></script>
+  <script>var couche = L.geoJson(test).addTo(map); </script>
+  
+
 </body>
 </html>
