Separation fichier reussie. Projet fonctionnel

--- a/Carte Ilias/Import Carte/Leaflet fonc/index.html
+++ b/Carte Ilias/Import Carte/Leaflet fonc/index.html
@@ -26,25 +26,7 @@
   
   <script src="js/main.js"></script>
   <script src="js/coucheUne.js"></script>
-  
-  	<script>
-	var nom='';
-	var coordonnee='';
-		function onEachFeature(feature, layer) {
-			layer.bindPopup(feature.properties.name);
-			layer.on('click', function (e){
-											nom = feature.properties.name;
-											coordonnee= feature.geometry.coordinates;
-											//window.alert(nom);
-											//window.alert(coordonnee);
-										  });
-	}
-
-	L.geoJSON(test, {
-		onEachFeature: onEachFeature
-	}).addTo(map);
-	
-</script>
+  <script src="js/evenement.js"></script>
   
 
 </body>
